# HelloOpenGL

./: .gitignore  CMakeLists.txt  HelloOpenGL.files  HelloOpenGL.includes  Makefile  Readme.md  todo.txt
docs/: .gitignore  normal_mapping.tex
inc/: Camera.h  ControllerCamera.h  ControllerCameraStepped.h  ControllerSun.h  GLBufferObject.h  GLFWInitialization.h  GLFramebufferObject.h  GLIndexBuffer.h  GLMesh.h  GLRenderer.h  GLShader.h  GLShaderProgram.h  GLTexture.h  GLVertexArray.h  GLVertexArrayObject.h  GLVertexBuffer.h  IndexBuffer.h  RAII_GLFWInitialization.h  RAII_GLFWwindow.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  colorspace_utils.h  cpu_mesh_generate.h  cpu_mesh_import.h  cpu_mesh_structs.h  cpu_mesh_utils.h  debug_utils.h  gl_type_id.h  import_mesh.h
inc/demos/: Demo.h  DemoClearColor.h  DemoFilter.h  DemoFramebuffer.h  DemoLinearColorspace.h  DemoLoadOBJ.h  DemoMultipleConcepts.h  DemoMultipleObjects3D.h  DemoPhongReflectionModel.h  DemoPhongReflectionModelTextured.h
inc/tests/: Test.h  TestClearColor.h  TestTexture2D.h  TestTwoInstances.h
notes/: key_handling_ideas.txt
res/meshes/: suzanne_horn_smooth_subdiv_1.blend  suzanne_horn_smooth_subdiv_1.mtl  suzanne_scaled_smooth_subdiv_1_left_earring.mtl  suzanne_subdiv_1_left_earring.blend
res/meshes/suzanne_scaled_for_ndc/: suzanne_with_sphere.mtl  suzanne_with_sphere_and_plane.blend  suzanne_with_sphere_and_plane_and_texture.blend
res/shaders/: Basic.shader  BlendVertColUniCol.shader  Filter.shader  Normal.todo.shader  PBR.shader  PhongReflModel.shader  ShadelessTexture.shader  Suzanne.shader  Texture.shader  TexturedPhongRefl.shader
res/textures/: alpha_texture_test.xcf  face_test.xcf  face_transparent_test.xcf  solid_test_texture.xcf
src/: Camera.cxx  ControllerCamera.cxx  ControllerCameraStepped.cxx  ControllerSun.cxx  GLBufferObject.cxx  GLFWInitialization.cpp  GLFramebufferObject.cxx  GLIndexBuffer.cxx  GLMesh.cxx  GLRenderer.cxx  GLShader.cxx  GLShaderProgram.cxx  GLTexture.cxx  GLVertexArray.cxx  GLVertexArrayObject.cxx  GLVertexBuffer.cxx  IndexBuffer.cxx  RAII_GLFWInitialization.cpp  RAII_GLFWwindow.cxx  Renderer.cxx  Shader.cxx  Texture.cxx  VertexArray.cxx  VertexBuffer.cxx  VertexBufferLayout.cxx  colorspace_utils.cxx  cpu_mesh_generate.cxx  cpu_mesh_import.cxx  cpu_mesh_structs.cxx  cpu_mesh_utils.cxx  debug_utils.cxx  import_mesh.cxx  main.cxx
src/demos/: Demo.cxx  DemoClearColor.cxx  DemoFilter.cxx  DemoFramebuffer.cxx  DemoLinearColorspace.cxx  DemoLoadOBJ.cxx  DemoMultipleConcepts.cxx  DemoMultipleObjects3D.cxx  DemoPhongReflectionModel.cxx  DemoPhongReflectionModelTextured.cxx
src/tests/: Test.cxx  TestClearColor.cxx  TestTexture2D.cxx  TestTwoInstances.cxx
tests/inc/: Test.h  TestClearColor.h
tests/src/: TestClearColor.cxx
